fix + aqerb ideas removed

--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -71,7 +71,7 @@
  AQERB_in_the_name_of_patron: "In the Name of Patron"
  AQERB_in_the_name_of_patron_desc: "Patrons are almost holy, but pious, figures in aqerbic history. Most of them have been pious priests, but sometimes important figures, such as politicians and rulers, also may claim this title. For their service to the Ilum, they are granted patronhood over important cities and places which might have been important to them during their lifetime."
  AQERB_sacred_geometry: "Sacred Geometry"
- AQERB_sacred_geometry_desc: "Many great minds believe that there is something inherently sacred about geometric shapes and patterns. This belief quickly spread during the time of 'Yanduzian Renaissance' which caused many buildings and structures to include symmetrical and repeating patterns. Not only is this aesthetically pleasing, but also leads to deeper knowledge about the universe."
+ AQERB_sacred_geometry_desc: "Many great minds believe that there is something inherently sacred about geometric shapes and patterns. This belief quickly spread during the time of 'Kalmaqani Renaissance' which caused many buildings and structures to include symmetrical and repeating patterns. Not only is this aesthetically pleasing, but also leads to deeper knowledge about the universe."
  AQERB_irrigation_efforts: "Irrigation Efforts"
  AQERB_irrigation_efforts_desc: "Most of settlements in aqerbic peninsula are based either on a major river, such as Zawarmahz, or on a smaller river but near the coast, such as Zibarat, with growing expansion of aqerbic states and subsequentially their population came the need of delivering fresh water to drier places. Now, thanks to years of building and maintaining advanced irrigation systems, cities like Barquna can prosper withouth direct connection to a water source."
  AQERB_palace_strongholds: "Palace Strongholds"
@@ -83,13 +83,13 @@
  nahshaharosian_ideas_start: "Nahshaharosian Traditions"
  nahshaharosian_ideas_bonus: "Nahshaharosian Ambition"
  nahralnoriya_western_expeditions: "Western Expeditions"
- nahralnoriya_western_expeditions_desc: "The desire to cross the Niheyan Ocean is not new. Many expeditions attempted to cross the ocean in the past, most notably fleet of 'Ard Yanduz in the VII century. With the advancements in the naval technology and more pragmatic reasons to explore what lies beyond the western horizon we may finally see what new world lies across the sea."
+ nahralnoriya_western_expeditions_desc: "The desire to cross the Niheyan Ocean is not new. Many expeditions attempted to cross the ocean in the past, most notably fleet of Zaphon in the VII century. With the advancements in the naval technology and more pragmatic reasons to explore what lies beyond the western horizon we may finally see what new world lies across the sea."
  nahralnoriya_advanced_irrigation: "Advanced Irrigation"
  nahralnoriya_advanced_irrigation_desc: "Our homeland lies in the valley of great river Nasihatr. It supplied first aqerbic settlers in these lands with water and fertile lands, well suited for agriculture. After some time it became apparent that the water needed to be supplied to more dry places further from the river itself. Many of great irrigation canals were build during the rule of Zawarmahzi Nusabate and serve their purpose to this day."
  nahralnoriya_open_court: "Open Court"
  nahralnoriya_open_court_desc: "Most of Nusabates like to brag about their elitism. Keeping everything within the family is seen as the correct way to rule, but they are to blind to see that to rule over your population is to know what they want. This technique of integrating with common folk can bring fresh ideas to the court."
  nahralnoriya_university_of_radom: "Radom University"
- nahralnoriya_university_of_radom_desc: "Radom is the site of the oldest university in this part of the world. It was founded in the VII century during the rule of Yanduz over Aqerb, but the city itself was an important center of innovation in the region. Greates mathematical minds of our times have studied there, bringing innovation not only to ourselves, but to the entire world."
+ nahralnoriya_university_of_radom_desc: "Radom is the site of the oldest university in this part of the world. It was founded in the VII century during the rule of Zaphon over Aqerb, but the city itself was an important center of innovation in the region. Greates mathematical minds of our times have studied there, bringing innovation not only to ourselves, but to the entire world."
  nahralnoriya_bridge_to_the_new_world: "Bridge to the New World"
  nahralnoriya_bridge_to_the_new_world_desc: "Our early advancements in Chantlia are paying off. We were first to set up important trade routes and deals with natives, practically monopolizing trade with the New World. Gold, tobacco, cocoa and cotton flow through Nahshaharos daily, bringing prosperity to our people."
  nahralnoriya_protector_of_aqerb: "Protector of Aqerb"
