--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -751,6 +751,7 @@
  TD_SIS_Refused_us_to_pay_less_taxes: "Didn't allow us to pay less taxes"
  TD_SIS_Didnt_back_down_with_unpopular_reforms: "Didn't back down from unpopular reforms"
  TD_SIS_Pushed_through_some_of_unpopular_reforms: "Didn't back down from unpopular reforms"
+ TD_SIS_Refused_more_privileges: "Refused More Privileges"
  TD_SIS_Local_Noble_vouched_for_him: "Famous noble if vouching for them"
  TD_SIS_Didnt_declared_war_on_leaving_subject: "Didnt forced another prince to stay in the second empire"
  TD_SIS_We_Want_To_Support_them: "We have choosen to support them"
