--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -57,6 +57,8 @@
  GRAND_NUSABAT: "Grand Nusabat"
  NUSABATIN: "Nusabatin"
  GRAND_NUSABATIN: "Grand Nusabatin"
+ KALMALAKIN: "Kalmalakin"
+ KALMALAK: "Kalmalak"
  
  cleidemni_council_reform: "Cleidemni Council"
  cleidemni_council_reform_desc: "When we escaped to this area we established war council filled with generals to oversee preparations to reclaim our lands. But this council has begun to slowly overshadow our monarch sometimes forcing elections and pushing their agendas."
