--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -458,8 +458,8 @@
  OYR: "Oyria"
  OYR_ADJ: "Oyrian"
 
- AQE: "Al-Aqerb"
- AQE_ADJ: "Aqerbian"
+ AQE: "Kalmaqan"
+ AQE_ADJ: "Kalmaqani"
  CAR: "Carba"
  CAR_ADJ: "Carbian"
  NOV: "Novoregno"
