--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  LOADING_TIP_0: "East Maqitan Piracy and Turmoil in the steppe has led many navigators to search for new trade routes in the west."
  LOADING_TIP_1: "Early Ehrenis and Argenians were famous for their raids along the coast of Silvestria, sea of Furmaria and even as far as Camaria."
- LOADING_TIP_2: "'Ard Yanduz was a Yaltazim state which unified the Aqerbic Peninsula in the VII century."
+ LOADING_TIP_2: "Kalmaqan was a Yaltazim state which unified the Aqerbic Peninsula in the VII century."
  LOADING_TIP_3: "Donuçakar converted to Saelianism after a diplomatic pact between the king and the Sigilian Emperor in the XIII century."
  LOADING_TIP_4: "Eneratian Emperorship has degenerated into a merely informal title which is held by a Chofeudian ruler Cyrille Eneratius de Cuei."
  LOADING_TIP_5: "Members of the Ramh Usra claim that they descend from the Musarfic god of war - Alramha."
