--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -23,10 +23,10 @@
  dorchia_nation_desc: "Labosian people of Dorchian isles have never been united in a traditional fashion. Many of them were only interested in their own wealth and splendor and any occasions when dorchian "kingdoms" were brought together was in times of foreign invasion. Now it is time to show the world strength of unified Dorchia!"
 
  aqerb_nation_title: "Unite Aqerb @AQE"
- aqerb_nation_desc: "During most of its history, Aqerb was a land divided between various warring states. When it was united uned 'Ard Yanduz we experienced a brief period of peace and prosperity. Now it is time for rebirth of aqerbic culture under [Root.Monarch.Dynasty.GetName] dynasty!"
+ aqerb_nation_desc: "During most of its history, Aqerb was a land divided between various warring states. When it was united under Zaphon the Great we experienced a brief period of peace and prosperity. Now it is time for rebirth of aqerbic culture under [Root.Monarch.Dynasty.GetName] dynasty!"
  
  carba_nation_title: "Unite Carba @CAR"
- carba_nation_desc: "During most of its history, Carba was a land divided between various warring states. When it was united uned 'Ard Yanduz it experienced a peak in its brutality and barbarity. Now it is time for birth of carban culture under [Root.Monarch.Dynasty.GetName] dynasty!"
+ carba_nation_desc: "During most of its history, Carba was a land divided between various warring states. When it was united under Zaphon of the Kalmaqani Empire it experienced a peak in its brutality and barbarity. Now it is time for birth of carban culture under [Root.Monarch.Dynasty.GetName] dynasty!"
  CAR_integrate_subjects_tt: "Integrate every aqerbic §Rvassal§! (Marches will not get integrated) into our nation. This action will cost us §Y5§! £adm£ and §Y5§! £dip£ per province."
 
  novoregno_nation_title: "Proclaim the Kingdom of Novoregno @NOV"
