--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -20,7 +20,7 @@
  nordmark_nation_desc: "Just like Glaser people in the west, now gyrdians need to be assimilated to protect the northern border of the empire."
 
  dorchia_nation_title: "Unite Dorchia @DCH"
- dorchia_nation_desc: "Labosian people of Dorchian isles have never been united in a traditional fashion. Many of them were only interested in their own wealth and splendor and any occasions when dorchian "kingdoms" were brought together was in times of foreign invasion. Now it is time to show the world strength of unified Dorchia!"
+ dorchia_nation_desc: "Labosian people of Dorchian isles have never been united in a traditional fashion. Many of them were only interested in their own wealth and splendor and any occasions when Dorchian 'kingdom' were brought together was in times of foreign invasion. Now it is time to show the world strength of unified Dorchia!"
 
  aqerb_nation_title: "Unite Aqerb @AQE"
  aqerb_nation_desc: "During most of its history, Aqerb was a land divided between various warring states. When it was united under Zaphon the Great we experienced a brief period of peace and prosperity. Now it is time for rebirth of aqerbic culture under [Root.Monarch.Dynasty.GetName] dynasty!"
