--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -726,6 +726,7 @@
  TD_SIS_Decay_Unlock_Perpetual_diet_decision_tt: "Unlocks "§PEstablish Perpetual Diet§!" decision"
  decision_sis_decay_establish_perpetual_diet_title: "Establish Perpetual Diet"
  TD_SIS_Establish_Permanent_Diet: "Established Permanent Diet"
+ desc_TD_SIS_Establish_Permanent_Diet: "The Tetrarchy has established a permanent diet which will periodically convene in the same location."
  TD_SIS_Decay_Unlock_Call_Imperial_diet_decision_tt: "Unlocks "§PHold Imperial Diet§!" decision"
  decision_hold_diet_sis_title: "Hold Imperial Diet"
  TD_SIS_Holding_the_diet: "Holding the Imperial Diet"
