--- a/localisation/TD_01_flavour_donucakar_l_english.yml
+++ b/localisation/TD_01_flavour_donucakar_l_english.yml
@@ -2,9 +2,9 @@
  donucakar_ideas: "Donuçakari Ideas"
  donucakar_ideas_start: "Donuçakari Traditions"
  donucakar_ideas_bonus: "Donuçakari Ambition"
- donucakar_last_bastion: "Last Bastion"
+ donucakar_last_bastion: "The Last Bastion"
  donucakar_last_bastion_desc: "For quite some time zealous and pompous people of Chilverchia have been subjugating neighboring nations in search for glory, seeing them as inferior. Now, most of our people's lands are under subjugation and only we are here to stop these infidels from destroying our beautiful country!"
- donucakar_king_and_the_princess: "King and the Princess"
+ donucakar_king_and_the_princess: "The King and the Princess"
  donucakar_king_and_the_princess_desc: "Donuçakar has a long history of diplomacy with the Empire. It all began in the XIII century, when the Saelian Emperor reached out to Donucian king with a proposal - the king will stop his brutal raids and convert to saelianism and the Emperor will grant him the hand of his daughter. The king accepted the proposal. After that deal more events followed, and the kingdom and the Empire still share a warm relation."
  donucakar_donucian_legacy: "Donucian Legacy"
  donucakar_donucian_legacy_desc: "Sometimes people ask themselves 'How did that Anavatic tribe migrated all the way to Confinia?'. The answer is simple - by conquest. It was a time of pamkusean weakness and great migrations, which forced donucian people to settle in a new land."
