--- a/localisation/TD_01_Flavour_Ibliguz_l_english.yml
+++ b/localisation/TD_01_Flavour_Ibliguz_l_english.yml
@@ -7,6 +7,11 @@
  ibliguz.2.desc: "Somehow, the Gug has returned. His newly found confidence, skill and a handsome scar has allowed him to amass a great host of tribes and is now charging towards our capital to slay the false Khan and restore his place on the throne."
  ibliguz.2.a: "???"
  IBL_gug_the_immortal: "The Scarred"
+ desc_IBL_gug_the_immortal: "Gug has been scarred by the fate and disloyay subjects, but thanks to his natural charisma, survival instict and tactical mind he managed to restore his place on the throne."
+ IBL_gug_the_immortal_die_desc: "[Root.Monarch.GetHerHisCap] battle spirit and handsome looks made our people trust him."
+ ancestor_IBL_gug_the_immortal: "The Scarred"
+ desc_ancestor_IBL_gug_the_immortal: ""
+ ancestor_IBL_gug_the_immortal_die_desc: "[Root.Monarch.GetHerHisCap] battle spirit and handsome looks made our people trust him."
 
 
  ibliguzi_gug_ideas: "Ibliguzi Ideas"
