--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1143,7 +1143,7 @@
  PROV1142: "Talyaqet"
  PROV1143: "Tisn"
  PROV1144: "Yanlan Coast" 
- PROV1145: "1145"
+ PROV1145: "Gebula"
  PROV1146: "1146"
  PROV1147: "Xatani" #dangerous pass
  PROV1148: "Azgur"
@@ -4311,7 +4311,7 @@
  PROV4310: "Abašan"
  PROV4311: "Aguliad" #boulder
  PROV4312: "Igizan" #bull
- PROV4313: "4313"
+ PROV4313: "Qatramahz" #City of Qatran (Frankincense)
  PROV4314: "Amtaygul"
  PROV4315: "4315"
  PROV4316: "Tifawat" #early morning
