--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -69,14 +69,14 @@
  ashmorland_tradenode: "Ashmorland"
  khantadun_tradenode: "Khanta"
  paredesh_tradenode: "Sursurthan"
- bugtang_tradenode: "Bugtang"
+ bugtang_tradenode: "Haenam Gulf"
  weixiao_tradenode: "Tövdov"
  henling_coast_tradenode: "Henling Coast"
  xilei_tradenode: "Beimen"
  eoduunso_tradenode: "Eoduunso"
- heisean_tradenode: "Heisean"
+ heisean_tradenode: "Chamnam"
  caizhu_tradenode: "Caizhu"
- huangchan_tradenode: "Hangchan"
+ huangchan_tradenode: "Paau"
  xun_tradenode: "Densheng"
  zoeng_straits_tradenode: "Zoeng Straits"
  hungcho_tradenode: "Hungcho"
@@ -84,9 +84,9 @@
  janma_tradenode: "Janma"
  upacaya_tradenode: "Upacaya"
  pradhana_tradenode: "Pradhana"
- maisetra_tradenode: "Maisetra"
+ maisetra_tradenode: "Megadya"
  upper_valvu_tradenode: "Upper Valvu"
- tivappu_tradenode: "Tivappu"
+ tivappu_tradenode: "Parhali"
  okukaiga_tradenode: "Okukaiga"
  toishima_tradenode: "Toishima"
  khemdan_tradenode: "Khemdan"
