spirit icons + fixes
im freeeeeeeeeeeeee

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -82,7 +82,7 @@
  ORTHIC_DO_IT: "Spreading $NAME|Y$ to all provinces will cost $COST|R$ Zheng, but give ($EFFECT$) until $UNTIL|Y$."
  CONFIRMICON: "Confirm Teaching"
  CONFIRMICON_TEXT: "$EFFECT$\nAre you sure?"
- NO_ICON_COMMISSIONED: "There is currently no teaching being spread."
+ NO_ICON_COMMISSIONED: "There is currently no spirit being favoured."
  SELECT_ICON_TO_BECOMMISSIONED: "Select a teaching to be spread."
  ORTHIC_LOSE: "You will lose the benefits you currently have from '$NAME|Y$'."
  PATRIARCH_MAP_TT_HAS: "$NAME|Y$ has a Sanctified Shrine."
