--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -59,15 +59,15 @@
  patron_mountain_spirits: "Mountain Spirits"
  patron_sea_spirits: "Sea Spirits"
  patron_desert_spirits: "Desert Spirits"
- patron_heaven_spirits: "Heavenly Spirits"
- patron_zimahei: "Zimahei Spirit"
+ patron_forest_spirits: "Forest Spirits"
+ patron_zimahei: "Zimahei"
  patron_dasenli_spirits: "Dasenli Spirits"
- patron_taiuan_spirits: "Taiuan Spirits"
- patron_shaantin_spirit: "Shaantin Spirit"
- patron_dencheng_spirit: "Dencheng Spirit"
- patron_kwaazim_spirit: "Kwaazim Spirits"
- patron_sengfu_spirit: "Sengfu Spirit"
- patron_daimin_spirit: "Daimin Spirit"
+ patron_taiuan_spirits: "Luetan Spirits"
+ patron_shaantin_spirit: "Wong Huung-Tseuk" #King Peacock
+ patron_dencheng_spirit: "Nanyu-Wang" #Catfish King
+ patron_kwaazim_spirit: "Kings of Kwaashan"
+ patron_sengfu_spirit: "Hoi-Si Yandao" #guiding sea lion
+ patron_daimin_spirit: "Lady Hoi-Fan" #Lady Blossom
 
  CITY: "City"
  KIT_TSAN: "Kit-Ts'an"
