estate names again

--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -1,13 +1,17 @@
 ﻿l_english:
+ #nobles
  estate_asaman: "Asaman"
+ estate_drotaci: "Drotaci"
+ estate_yujihadga: "Yujihadga"
+ estate_usra_clans: "Afradusran"
+ #Clergy
  estate_matahri: "Matahari"
+ estate_shanhohn: "Shanhohn"
+ estate_priesthood: "Priesthood"
+ estate_zimbuksi: "Zimbuksi"
+ #Merchants
+
+ #Cossacks
  estate_ratsunikud: "Ratsunikud"
  estate_kakigos: "Kakigos"
- estate_usra_clans: "Afradusran"
- estate_amagarians: "Amagarians"
  estate_amagari: "Amagari"
- estate_amagaris: "Amagaris"
- estate_drotaci: "Drotaci"
- estate_priesthood: "Priesthood"
- estate_shanhohn: "Shanhohn"
- estate_yujihadga: "Yujihadga"
