kaansuentin (no events)

--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -1049,7 +1049,7 @@
  RAISEWARTAXESSTOPPED_2: "Because of our lack of enough Military Power we have had to stop collecting the raised war taxes for our wars."
  RAISEWARTAXESSTOPPED_LOG: "Because of our lack of enough Military Power we have had to stop collecting the raised war taxes for our wars."
  RAISEWARTAXESSTOPPED_BTN1: "OK"
- estate_church_ownership: "[Country.GetClergyName] Land Ownership"
+ estate_church_ownership: "Clergy Land Ownership" #TODO - change the rest or find a solution
  estate_brahmins_ownership: "[Country.GetBrahminsName] Land Ownership"
  estate_maratha_ownership: "[Country.GetMarathasName] Land Ownership"
  estate_nobles_ownership: "[Country.GetNobilityName] Land Ownership"
