--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -296,3 +296,12 @@
  kaansuentin_power_struggle_desc: "The Kaansuentin elections are conducted through a secred mystic communion with the heavens. This bar represents how willing is the clergy to tip the scales in favour of a member of the ruling family. Having more Divine Interference increases the chances of getting additional options during the election event.\n\nAdditionaly, You will gain different modifiers depending on your current stance:\n §RNegative§! Divine Interference will yield §Yyearly Zheng§!, §Yyearly corruption§! and §Yarmy morale§!.\n §GPositive§! Divine Interference will yield §Ydiplomatic reputation§!, §Yglobal tax modifier§! and §Ystability cost modifier§!.\n\nDivine Interference will increase due to:\n-High clergy loyalty\n-High nobility influence\n-Pious ruler traits\n-High absolutism\n\nDivine Interference will decrease due to:\n-High clergy influence\n-Sinful ruler traits\n-Passively.\n"
  kaansuentin_power_struggle_gain_modifier: "Divine interference gain modifier"
  monthly_kaansuentin_power_struggle: "Monthly Divine Interference"
+
+ kaansuentin.1.t: "Kaansuentin Mystical Communion"
+ kaansuentin.1.desc: "heirs are chosen through various fortune telling methods which have a lot of freedom of interpretation so there is obvious corruption"
+ kaansuentin.1.a: "We shall not undermine the decisions of the divine."
+ kaansuentin_good_trait: "This heir will have a guaranteed virtuous trait."
+ kaansuentin.1.b: "Surely the Zimbuksi willing to change their interpretation in our favour..."
+ kaansuentin.1.c: "This is only a minor setback in our goal of keeping the family powerful."
+ kaansuentin_bad_trait_and_puppet: "This heir will have a guaranteed sinful trait. After they ascend to the throne they will be a puppet to the clergy, increasing their influence and curtailing royal power."
+ clerical_puppet_mod: "Puppet of the Zimbuksi"
