--- a/localisation/aow_l_english.yml
+++ b/localisation/aow_l_english.yml
@@ -14,10 +14,10 @@
  insulted_rival: "Insulted Rival"
  annexers_legacy: "Annexed Subjects"
  usury_forgiven: "Usury Forgiven"
- desc_usury_forgiven: "The Pope has officially forgiven us for the sin of Usury."
+ desc_usury_forgiven: "The Episcopus has officially forgiven us for the sin of Usury."
  forgiveness_for_usury: "Forgive Usury"
  proclaim_holy_war: "Proclaim Holy War"
- send_papal_legate: "Send Papal Legate"
+ send_papal_legate: "Send Episcopal Legate"
  sanction_commercial_monopoly: "Sanction Commercial Monopoly"
  ai_nation: "AI Controlled"
  OWN_DYNASTY: "Your Dynasty"
