--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -2220,7 +2220,7 @@
  PAPACY_CHANCE: "Chance:"
  PAPACY_LOYALTY: "Loyalty:"
  PAPACY_CLOSE: "Close"
- PAPACY_THE_HOLY_SEE: "The Holy See"
+ PAPACY_THE_HOLY_SEE: "The Vicariate"
  PAPACY_MEMBER_STATES: "Member States"
  PAPACY_INFLUENCE: "Influence"
  PP_NATION_NAME: "Nation Name"
