episcopate gfx + loc

--- a/localisation/emperor_content_l_english.yml
+++ b/localisation/emperor_content_l_english.yml
@@ -3102,8 +3102,8 @@
  sin_impiety: "religious impiety"
  sin_wroth: "furiously lashing out at a priest"
  sin_adultery: "adultery"
- council_of_trent_members_tt: "All participants in the Magna Synodus will get §G+50§! opinion with [Root.GetName]"
- council_of_trent_participation: "Magna Synodus Member"
+ council_of_trent_members_tt: "All participants in the The Great Synod will get §G+50§! opinion with [Root.GetName]"
+ council_of_trent_participation: "The Great Synod Member"
  legitimate_subject_elector_tt: "This Subject will be considered Legitimate in the eyes of the Empire, conferring no penalty in Imperial elections."
  protected_markets_modifier: "Protected Markets"
  desc_protected_markets_modifier: "The markets of Germany are protected by the firm hand of the state, ensuring that money flows into coffers."
@@ -3370,7 +3370,7 @@
  flavor_pap.21.d: "The Council of Trent was convened in the hopes of reconciling the various schismatic churches that have emerged in the wake of the Protestant Reformation, but after a seemingly endless series of debates and negotiations the results have been inconclusive. The decision has finally been made to disband the Council. May God have mercy on the souls of those who were not returned to the Church."
  flavor_pap.21.d2: "The Council of Trent was convened in the hopes of reconciling the various schismatic churches that have emerged in the wake of the Protestant Reformation, but now that a bloody conflict between Protestants and Catholics has erupted across Europe the proceedings have been called to an inconclusive halt. The Council has been formally disbanded with none of the participants being fully satisfied. May God have mercy on the souls of those who were not returned to the Church."
  flavor_pap.21.a: "Reconciliation was a pipe dream."
- FINISH_COUNCIL_OF_TRENT: "§YThe Magna Synodus will end§!"
+ FINISH_COUNCIL_OF_TRENT: "§YThe MThe Great Synodwill end§!"
  dlc102_bos_sprite_pack: "Bosnian Sprites"
  dlc102_ser_sprite_pack: "Serbian Sprites"
  dlc102_hun_sprite_pack: "Hungarian Sprites"
