--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -42,9 +42,9 @@
  MARINES_FORCELIMIT: "We can recruit up to $VAL|%Y$ of our force-limit of $FL$ as §GMarines§! due to:\n"
  JANISSARY_FORCELIMIT: "We can recruit up to $VAL|%Y$ of our force-limit of $FL$ as §GJanissaries§! as we can only recruit them from our Heathen Provinces.\n"
  NO_CURRENT_COUNTRIES_IN_THIS_LIST: "Currently No Countries"
- HARSH_INFO_TOOLTIP: "There are $VAL|Y$ Cardinals supporting the Harsh Measures in the Council.\nSupporting the Harsh Measures gives the following benefits to $WHO$:\n$EFFECT$"
- CONCIL_INFO_TOOLTIP: "There are $VAL|Y$ Cardinals supporting the Conciliatory Measures in the Council.\nSupporting the Conciliatory Measures gives the following benefits to $WHO$:\n$EFFECT$"
- COUNCIL_OF_TRENT_EXPLANATION: "The Magna Synodus lasts until all doctrines have been decided, or until a few decades have passed."
+ HARSH_INFO_TOOLTIP: "There are $VAL|Y$ Cardinals supporting Palmisiano in the Council.\nSupporting the Harsh Measures gives the following benefits to $WHO$:\n$EFFECT$"
+ CONCIL_INFO_TOOLTIP: "There are $VAL|Y$ Cardinals supporting Cesaroni in the Council.\nSupporting the Conciliatory Measures gives the following benefits to $WHO$:\n$EFFECT$"
+ COUNCIL_OF_TRENT_EXPLANATION: "The The Great Synod lasts until all doctrines have been decided, or until a few decades have passed."
  WE_ARE_NEUTRAL_IN_COUNCIL: "We are currently neutral in the Council, which gives us the following effect:\n$EFFECT$"
  OTHERS_ARE_NEUTRAL_IN_COUNCIL: "The countries that are neutral in the Council gain the following effect:\n$EFFECT$"
  PAPAL_BULL_NOT_CURIA_CONTROLLER: "§RYou are not the Papal Controller. Only the Papal Controller can spend the Curia Coffers to enact a Golden Bull.§!"
@@ -125,7 +125,7 @@
  MODIFIER_TRANSFER_TRADE_POWER_REASONS: "Transfer Trade Acceptance"
  MODIFIER_LOCAL_WARSCORE_COST_MODIFIER: "War Score Cost"
  MODIFIER_MERCANTILISM_COST: "Cost to Promote Mercantilism"
- TRENT_IS_FINISHED: "Magna Synodus Finished"
+ TRENT_IS_FINISHED: "The Great Synod Finished"
  TRENT_IS_NOT_FINISHED: "Still doctrines to be set"
  ALLOW_SETTLEMENT_GROWTH_TITLE: "Allow Settlement Growth"
  ALLOW_SETTLEMENT_GROWTH_DESC: "This lets the subject do settlement growth again."
@@ -176,38 +176,38 @@
  HARSH_POSITION_TAKEN: "A Palmisanian Stance"
  CONCILATORY_POSITION_TAKEN_HEAD: "Cesaronian"
  HARSH_POSITION_TAKEN_HEAD: "Palmisanian"
- COUNCIL_STANCE_US_TITLE: "$POSITION_HEAD$ in Magna Synodus"
- COUNCIL_STANCE_US_SETUP: "When we change stance in the Magna Synodus"
+ COUNCIL_STANCE_US_TITLE: "$POSITION_HEAD$ in The Great Synod"
+ COUNCIL_STANCE_US_SETUP: "When we change stance in the The Great Synod"
  COUNCIL_STANCE_US_HEADER: "Our Archbishop reports"
- COUNCIL_STANCE_US_1: "$POSITION$ taken in Magna Synodus"
+ COUNCIL_STANCE_US_1: "$POSITION$ taken in The Great Synod"
  COUNCIL_STANCE_US_2: ""
  COUNCIL_STANCE_US_3: ""
  COUNCIL_STANCE_US_4: ""
- COUNCIL_STANCE_US_LOG: "We took $POSITION$ in Magna Synodus."
+ COUNCIL_STANCE_US_LOG: "We took $POSITION$ in The Great Synod."
  COUNCIL_STANCE_US_BTN1: "OK"
  COUNCIL_STANCE_US_BTN2: "OK"
  COUNCIL_STANCE_US_BTN3: "Go to"
  COUNCIL_STANCE_US_MAP: "$POSITION$"
- COUNCIL_STANCE_THEM_TITLE: "$POSITION_HEAD$ in Magna Synodus"
- COUNCIL_STANCE_THEM_SETUP: "When another nation change stance in the Magna Synodus"
+ COUNCIL_STANCE_THEM_TITLE: "$POSITION_HEAD$ in The Great Synod"
+ COUNCIL_STANCE_THEM_SETUP: "When another nation change stance in the The Great Synod"
  COUNCIL_STANCE_THEM_HEADER: "Our Archbishop reports"
- COUNCIL_STANCE_THEM_1: "Stance Change in the Magna Synodus"
- COUNCIL_STANCE_THEM_2: "$WHO$ has changed their position in the Magna Synodus."
+ COUNCIL_STANCE_THEM_1: "Stance Change in the The Great Synod"
+ COUNCIL_STANCE_THEM_2: "$WHO$ has changed their position in the The Great Synod."
  COUNCIL_STANCE_THEM_3: "They have decided to take $POSITION$."
  COUNCIL_STANCE_THEM_4: ""
- COUNCIL_STANCE_THEM_LOG: "$WHO$ took $POSITION$ in Magna Synodus."
+ COUNCIL_STANCE_THEM_LOG: "$WHO$ took $POSITION$ in The Great Synod."
  COUNCIL_STANCE_THEM_BTN1: "OK"
  COUNCIL_STANCE_THEM_BTN2: "OK"
  COUNCIL_STANCE_THEM_BTN3: "Go to"
  COUNCIL_STANCE_THEM_MAP: "$POSITION$"
- COUNCIL_CONCESSION_TITLE: "Doctrines in Magna Synodus"
- COUNCIL_CONCESSION_SETUP: "When the Curia Controller enacts another doctrine in the Magna Synodus"
+ COUNCIL_CONCESSION_TITLE: "Doctrines in The Great Synod"
+ COUNCIL_CONCESSION_SETUP: "When the Curia Controller enacts another doctrine in the The Great Synod"
  COUNCIL_CONCESSION_HEADER: "Our Archbishop reports"
- COUNCIL_CONCESSION_1: "Doctrines in the Magna Synodus"
+ COUNCIL_CONCESSION_1: "Doctrines in the The Great Synod"
  COUNCIL_CONCESSION_2: "$WHO$ has enacted another doctrine, and now all $RELIGION$ countries will gain $WHICH$, which has the following effects:\n"
  COUNCIL_CONCESSION_3: "$EFFECT$"
  COUNCIL_CONCESSION_4: ""
- COUNCIL_CONCESSION_LOG: "$WHICH$ enacted by $WHO$ in The Magna Synodus."
+ COUNCIL_CONCESSION_LOG: "$WHICH$ enacted by $WHO$ in The The Great Synod."
  COUNCIL_CONCESSION_BTN1: "OK"
  COUNCIL_CONCESSION_BTN2: "OK"
  COUNCIL_CONCESSION_BTN3: "Go to"
@@ -355,25 +355,25 @@
  EXPAND_ADMINISTRATION_NOT_ENOUGH_PROGRESS: "§R- You need at least $COST$ Reform Progress to expand your administration.§!"
  EXPAND_ADMINISTRATION_TT: "Spend $COST|Y$ Reform Progress to gain the following effects:\n$EFFECT$"
  # Council of Trent
- COUNCIL_OF_TRENT: "Magna Synodus"
+ COUNCIL_OF_TRENT: "The Great Synod"
  COUNCIL_POSITION_ALREADY: "§RYou already have selected this stance in the Council.§!"
  COUNCIL_POSITION_THIS_RULER: "§R$NAME$ has already taken a stance in this Council, and a ruler can not change his or her mind.§!"
  COUNCIL_POSITION_NO_CARDINAL: "§RWe have no cardinal, so we have no say.§!"
  COUNCIL_HARSH_TITLE: "Support Harsh Measures"
- COUNCIL_HARSH_DESC: "Do you want to be on the Palmisanian side in the Magna Synodus? You can not change your stance until you get a new ruler. This have the following effects:\n$IMPACT$"
+ COUNCIL_HARSH_DESC: "Do you want to be on the Palmisanian side in the The Great Synod? You can not change your stance until you get a new ruler. This have the following effects:\n$IMPACT$"
  COUNCIL_CONCILATORY_TITLE: "Support Conciliatory Measures"
- COUNCIL_CONCILATORY_DESC: "Do you want to be on the Cesaronian side in the Magna Synodus? You can not change your stance until you get a new ruler. This have the following effects:\n$IMPACT$"
- COUNCIL_CONCESSION_NOT: "§RYou are not the episcopal controller!§!\nOnly the Episcopal Controller can spend the Curia Coffers on new Measures in the Magna Synodus. The cost depends on how many cardinals support each side."
+ COUNCIL_CONCILATORY_DESC: "Do you want to be on the Cesaronian side in the The Great Synod? You can not change your stance until you get a new ruler. This have the following effects:\n$IMPACT$"
+ COUNCIL_CONCESSION_NOT: "§RYou are not the episcopal controller!§!\nOnly the Episcopal Controller can spend the Curia Coffers on new Measures in the The Great Synod. The cost depends on how many cardinals support each side."
  COUNCIL_CONCESSION_ALREADY: "§RYou have already taken the oppposite stance!§!"
  COUNCIL_CONCESSION_NOT_AFFORD: "§RThe Curia lacks the fund for this doctrine.§!\n It would cost $COST$¤ due to:\n $WHY$"
  COUNCIL_CONCESSION_CAN_AFFORD: "This doctrine would cost the curia $COST$¤ due to:\n $WHY$"
  CARDINAL_OF_X_REDUCE: "\n$PERC|2%Y$ of Cardinals are $WHAT$: §G-$VAL|2$§!¤"
  COUNCIL_CONCESSION_C_TITLE: "Adopt Doctrine"
  COUNCIL_CONCESSION_C_DESC: "Adopting $NAME$ will cost $COST|Y$¤ and have the following benefits:\n$IMPACT$"
- COUNCIL_NO_COUNCIL: "There is not yet a Magna Synodus"
- COUNCIL_FINISHED: "The debates have finished in the Magna Synodus and the Church has changed.  There is no possibility to change your position anymore."
- IS_COUNCIL_POS_TRIGGER: "$NAME|Y$ is $POS|Y$ in the Magna Synodus"
- IS_NOT_COUNCIL_POS_TRIGGER: "$NAME|Y$ is NOT $POS|Y$ in the Magna Synodus"
+ COUNCIL_NO_COUNCIL: "There is not yet a The Great Synod"
+ COUNCIL_FINISHED: "The debates have finished in the The Great Synod and the Church has changed.  There is no possibility to change your position anymore."
+ IS_COUNCIL_POS_TRIGGER: "$NAME|Y$ is $POS|Y$ in the The Great Synod"
+ IS_NOT_COUNCIL_POS_TRIGGER: "$NAME|Y$ is NOT $POS|Y$ in the The Great Synod"
  COUNCIL_NEUTRAL_TRIG: "Neutral"
  COUNCIL_CONCILATORY_TRIG: "Cesaronian"
  COUNCIL_HARSH_TRIG: "Palmisanian"
@@ -946,7 +946,7 @@
  second_concession_harsh: "Local Rite"
  third_concession_harsh: "Ruler-appointed legates"
  fourth_concession_harsh: "Freedom to overrule"
- first_concession_concilatory: "Allow cultural shrines"
+ first_concession_concilatory: "Allow Cultural Shrines"
  second_concession_concilatory: "Unified Rite"
  third_concession_concilatory: "Empowered Legates"
  fourth_concession_concilatory: "Absolute Edicts"
