Spirit patron Loc

--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -55,19 +55,33 @@
 
  can_pick_spirit_tt: "This ruler did NOT pick a spirit yet."
 
- patron_river_spirits: "River Spirits"
- patron_mountain_spirits: "Mountain Spirits"
- patron_sea_spirits: "Sea Spirits"
- patron_desert_spirits: "Desert Spirits"
- patron_forest_spirits: "Forest Spirits"
- patron_zimahei: "Zimahei"
- patron_dasenli_spirits: "Dasenli Spirits"
- patron_taiuan_spirits: "Luetan Spirits"
- patron_shaantin_spirit: "Wong Huung-Tseuk" #King Peacock
- patron_dencheng_spirit: "Nanyu-Wang" #Catfish King
- patron_kwaazim_spirit: "Kings of Kwaashan"
- patron_sengfu_spirit: "Hoi-Si Yandao" #guiding sea lion
- patron_daimin_spirit: "Lady Hoi-Fan" #Lady Blossom
+ patron_river_spirits: "River Spirits" 
+ patron_river_spirits_desc: "The spirits of the river are seen as benevolent lifegivers, being the most crucial foundation for all settlements that came to be. Droughts have often been thought to be caused by humans who wronged the river spirits, leading to them being highly revered by people of all walks of life." 
+ patron_mountain_spirits: "Mountain Spirits" 
+ patron_mountain_spirits_desc: "Whether it be stone, iron or gemstones, all riches found beneath the mountains are seen to be blessings from the spirits that rule over them. The mountain spirits also represent strength, granting their blessings upon warriors and builders." 
+ patron_sea_spirits: "Sea Spirits" 
+ patron_sea_spirits_desc: "Prayers to the sea spirits usually come from weary sailors and fishermen, pleading for calm waters and bountiful catches. They acknowledge humility highly and punish those that greedily reap the bounties of the sea without concern." 
+ patron_desert_spirits: "Desert Spirits" 
+ patron_desert_spirits_desc: "In desolate, barren lands, the desert spirits are revered, for they oversee the fortune of all that pass through their domain. They are as harsh as the terrain, and grant swift travels across the deserts for a sacrifice deemed worthy enough." 
+ patron_forest_spirits: "Forest Spirits" 
+ patron_forest_spirits_desc: "The forests house all kinds of animals and vegetation, presenting food and shelter to all its denizens. Hunters highly value these spirits for they offer them luck against their prey while philosophers pray to them for wisdom of all things." 
+ patron_zimahei: "Zimahei" 
+ patron_zimahei_desc: "The two headed dragon spirit Zimahei is the guardian of the valley of her namesake that maintains peace and prosperity in return for worship and sacrifices. It is believed that the chaos in the Zimahei Valley was caused by her followers abandoning him and causing flooding and wars in the region." 
+ patron_dasenli_spirits: "Dasenli Spirits" 
+ patron_dasenli_spirits_desc: "The spirits of Dasenli are fickle and hard to please, giving blessings and curses seemingly on any whim depending on sacrifices and prayers that do not please them. They are seen to be paragons of perfection and are not fond of flaws." 
+ patron_taiuan_spirits: "Luetan Spirits" 
+ patron_taiuan_spirits_desc: "In the depths of the Luetan, there are a myriad of spirits present who all value the importance of keeping nature preserved, disliking the ruination of life. They are thought to be part of the roots of all trees in Tsutan, protecting them from disease, with prayers to them often being ones asking for healing." 
+ patron_shaantin_spirit: "Wong Huung-Tseuk" #King Peacock 
+ patron_shaantin_spirit_desc: "The protector of Shaantin Island, Wong Huung-Tseuk is represented as a colourful peacock, patron of beauty and prosperity. While bestowing the residents of his island with prosperity, he expects it to be kept beautiful with many shrines and temples built to enhance the natural beauty of the island." 
+ patron_dencheng_spirit: "Nanyu-Wang" #Catfish King 
+ patron_dencheng_spirit_desc: "Nanyu-Wang is understood to be the spirit of wealth and authority, the one who controls the flow of riches to a kingdom and one who aids kings in rulership. He values strong leaders and asks for gold and silver to be offered upon his shrines to grant blessings." 
+ patron_kwaazim_spirit: "Kings of Kwaashan" 
+ patron_kwaazim_spirit_desc: "The three tiger spirits known as the Kings of Kwaashan are thought to protect the pilgrims and wanderers of western Moongma. Seen as the patrons of monks and priests, they are commonly prayed to for protection against harm and peaceful journeys."
+ patron_sengfu_spirit: "Hoi-Si Yandao" #guiding sea lion 
+ patron_sengfu_spirit_desc: "In times of storms and dense fog on the sea, prayers are said to Hoi-Si Yandao, the guiding sea lion. Stories have been told that he guides the currents and winds to lead sailors back home without even a scratch." 
+ patron_daimin_spirit: "Lady Hoi-Fan" #Lady Blossom 
+ patron_daimin_spirit_desc: "On the peaceful island of Daimin, the blossoming plum tree is the symbol of Lady Hoi-Fan, the spirit of the island who blessed the newcomers who settled the island. Offerings to her are often in the form of tea leaves and fresh blossoming branches for her to bless the harvests."
+
 
  CITY: "City"
  KIT_TSAN: "Kit-Ts'an"
