map areas and regions (shouldnt crash)

--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -27,3 +27,4 @@
  LOADING_TIP_25: "Empire of Paradevari protected Samadia from tribal raids for most of its history - up until Bunelisuli invasion."
  LOADING_TIP_26: "People of Šarikullu control the most important trade routes in North Sahila, allowing them to indirectly influence many countries."
  LOADING_TIP_27: "Gug! Gug! Gug!"
+ LOADING_TIP_28: "\"Three thousand armed men, their blades of steel\nMarched to the shore, where waves would kneel.\""
