--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -99,3 +99,6 @@
  azguramajal_region: "Azguramajal"
  upper_jambaka_region: "Tenera"
  imamlayka_region: "Imamlayka"
+ mattosan_region: "Mattosan"
+ parrout_region: "Parrout"
+ bosonapan_coast_region: "Bosonapan Coast"
