cultures and religion

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -533,3 +533,33 @@
  yamdan_group: "Yamdan"
  tampiiaga: "Tamppiiaga"
  bendrepaga: "Bedregapa"
+
+ parroutan_group: "Parroutan"
+ paokan: "REPLACE_ME"
+ gaki: "REPLACE_ME"
+ eur: "REPLACE_ME"
+ donparan: "REPLACE_ME"
+ 
+ tinan_group: "Tinan"
+ dabban: "REPLACE_ME"
+
+ matteie_group: "Matteie"
+ kinian: "REPLACE_ME"
+ irina: "REPLACE_ME"
+
+ kapeti_group: "Kapeti"
+ dana: "REPLACE_ME"
+ asmira: "REPLACE_ME"
+ zoa: "REPLACE_ME"
+
+ kwaenic_group: "Kwaenic"
+ kwaena: "REPLACE_ME"
+ mmepoasan: "REPLACE_ME"
+
+ nyanigic_group: "Nyanigic"
+ nyanigi: "REPLACE_ME"
+
+ bosonapan_group: "Bosonapan"
+ mbania: "REPLACE_ME"
+ geira: "REPLACE_ME"
+ tene: "REPLACE_ME"
