--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -482,3 +482,13 @@
  jambakan_pantheons_rebels_army: "$RELIGION$ Army"
  jambakan_pantheons_rebels_demand: "Convert $COUNTRYNAME$"
  seyita: "Seyita"
+
+ parroutan_pantheons: "Parroutan Pantheons"
+ parroutan_pantheons_religion_desc: ""
+ parroutan_pantheons_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ parroutan_pantheons_rebels_title: "Religious"
+ parroutan_pantheons_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ parroutan_pantheonss_rebels_army: "$RELIGION$ Army"
+ parroutan_pantheons_rebels_demand: "Convert $COUNTRYNAME$"
+ albasa: "Albasa"
+ 
