--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -535,31 +535,31 @@
  bendrepaga: "Bedregapa"
 
  parroutan_group: "Parroutan"
- paokan: "REPLACE_ME"
- gaki: "REPLACE_ME"
- eur: "REPLACE_ME"
- donparan: "REPLACE_ME"
+ paokan: "Paokan"
+ gaki: "Gaki"
+ eur: "Eur"
+ donparan: "Donparan"
  
  tinan_group: "Tinan"
- dabban: "REPLACE_ME"
+ dabban: "Dabban"
 
  matteie_group: "Matteie"
- kinian: "REPLACE_ME"
- irina: "REPLACE_ME"
+ kinian: "Kinian"
+ irina: "irina"
 
  kapeti_group: "Kapeti"
- dana: "REPLACE_ME"
- asmira: "REPLACE_ME"
- zoa: "REPLACE_ME"
+ dana: "Dana"
+ asmira: "Asmira"
+ zoa: "Zoa"
 
  kwaenic_group: "Kwaenic"
- kwaena: "REPLACE_ME"
- mmepoasan: "REPLACE_ME"
+ kwaena: "kwaena"
+ mmepoasan: "Mmepoasan"
 
  nyanigic_group: "Nyanigic"
- nyanigi: "REPLACE_ME"
+ nyanigi: "Nyanigi"
 
  bosonapan_group: "Bosonapan"
- mbania: "REPLACE_ME"
- geira: "REPLACE_ME"
- tene: "REPLACE_ME"
+ mbania: "Mbania"
+ geira: "Geira"
+ tene: "Tene"
