--- a/localisation/TD_01_flavour_prices_l_english.yml
+++ b/localisation/TD_01_flavour_prices_l_english.yml
@@ -2,5 +2,6 @@
  prices.100.t: "Restoration of Gisisn Granaries"
  RESTORED_GISIAN_GRANARY: "Gisian Granaries"
  TD_restored_importance_modifier: "Restored Importance"
+ desc_TD_restored_importance_modifier: "Slowly lessening in importance following the Zakarturi collapse, Kedipol is once again a window to the world for Kakigian nations."
  prices.100.desc: "Historically, the fertile basin of Kidinare provided the majority of grain to the empire and many countries around the Panourgian and Maqitan seas. After the great incursion of the eastern hordes and the collapse of the Zakarturi civilization, many of those farmlands were burned to the ground by the nomadic savages, leading to steep decrease of the grain production in the region. But there was some silver lining in this situation - the ash from burned villages made the land much more potent than it was. Now the land is back in our hands to redevelop again."
  prices.100.a: "Very Well."
